fix: icon skills overlap on light theme

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -122,7 +122,7 @@ img {
 [data-icon] img {
   width: 100% !important;
   height: 100% !important;
-  display: block;
+  /* display: block; */
 }
 
 .icon-light {
